test/comment_in_formals.cppo
#define FOO(x, (* a comment *) y) x+y
FOO(42, 23)
